--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -91,14 +91,12 @@
 
 	<tr>
 		<td><a href="http://beust.com/jcommander/">JCommander</a></td>
-		<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">The Apache Software License Version, Version 2.0</a>
-		</td>
+		<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 
 	<tr>
 		<td><a href="https://looks.dev.java.net/">JGoodies Looks</a></td>
-		<td><a href="http://www.opensource.org/licenses/bsd-license.php">Berkeley Software Distribution (BSD)
-			License</a></td>
+		<td><a href="http://www.opensource.org/licenses/bsd-license.php">Berkeley Software Distribution (BSD) License</a></td>
 	</tr>
 
 	<tr>
@@ -113,8 +111,7 @@
 
 	<tr>
 		<td><a href="http://groovy.codehaus.org/">Groovy</a></td>
-		<td><a href="http://svn.groovy.codehaus.org/browse/~raw,r=6114/groovy/trunk/groovy/groovy-core/LICENSE.txt">The
-			Apache Software License Version, Version 2.0</a></td>
+		<td><a href="http://groovy.codehaus.org/License+Information">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 
 	<tr>
@@ -187,10 +184,13 @@
 
 	<tr>
 		<td><a href="http://tango.freedesktop.org/">Tango Desktop Project</a></td>
-		<td><a href="http://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution Share-Alike
-			license</a></td>
+		<td><a href="http://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution Share-Alike license</a></td>
 	</tr>
 
+	<tr>
+		<td><a href="http://www.thymeleaf.org/">Thymeleaf</a></td>
+		<td><a href="http://www.thymeleaf.org/license.html">The Apache Software License Version, Version 2.0</a></td>
+	</tr>
 </table>
 
 <p>If something is missing from the above list it's not a license breach but a bug ;-) and you should report it.</p>
