lilith.huxhorn.de => lilithapp.com

--- a/lilith/src/main/resources/help/contact.xhtml
+++ b/lilith/src/main/resources/help/contact.xhtml
@@ -21,7 +21,7 @@
 
 <p>You may also follow <a href="http://twitter.com/lilithapp">lilithapp</a> on Twitter if you like.</p>
 
-<p>Lastly, you can simply <a href="mailto:contact@lilith.huxhorn.de">write me a mail</a>.</p>
+<p>Lastly, you can simply <a href="mailto:contact@lilithapp.com">write me a mail</a>.</p>
 
 <p><a href="#top">Back to top.</a></p>
 </body>
