--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -70,7 +70,7 @@
 		You could give me a nice review over at <a href="http://sourceforge.net/projects/lilith/">SourceForge</a>.
 	</li>
 	<li>
-		You could even write an <a href="mailto:contact@lilith.huxhorn.de">email</a>.
+		You could even write an <a href="mailto:contact@lilithapp.com">email</a>.
 	</li>
 </ul>
 
