Fixed Groovy links in help.

--- a/lilith/src/main/resources/help/clipboardFormatters.xhtml
+++ b/lilith/src/main/resources/help/clipboardFormatters.xhtml
@@ -20,7 +20,7 @@
 
 <p>A clipboard formatter must implement the de.huxhorn.lilith.services.clipboard.ClipboardFormatter interface.</p>
 
-<p>See <a href="http://groovy.codehaus.org/">http://groovy.codehaus.org/</a> for help on Groovy.</p>
+<p>See <a href="http://groovy-lang.org/">http://groovy-lang.org/</a> for help on Groovy.</p>
 
 <p>You can reinitialize the example clipboard formatters in the <a href="prefs://Troubleshooting">Troubleshooting preferences</a>.</p>
 
