--- a/lilith/src/main/resources/help/conditions.xhtml
+++ b/lilith/src/main/resources/help/conditions.xhtml
@@ -134,7 +134,7 @@
 	the search box. After entering the "#groovy#"-prefix, the color of the textfield will indicate if
 	a script of the given name exists.</p>
 
-<p>See <a href="http://groovy.codehaus.org/">http://groovy.codehaus.org/</a> for help on Groovy.</p>
+<p>See <a href="http://groovy-lang.org/">http://groovy-lang.org/</a> for help on Groovy.</p>
 
 <p>You can reinitialize the example conditions in the <a href="prefs://Troubleshooting">Troubleshooting preferences</a>.</p>
 
