--- a/lilith/src/main/resources/help/detailsView.xhtml
+++ b/lilith/src/main/resources/help/detailsView.xhtml
@@ -22,7 +22,7 @@
 <p>If you destroy this file, somehow, then simply delete it entirely and restart Lilith. The original detailsView.groovy
 	file will be restored.</p>
 
-<p>See <a href="http://groovy.codehaus.org/">http://groovy.codehaus.org/</a> for help on Groovy.</p>
+<p>See <a href="http://groovy-lang.org/">http://groovy-lang.org/</a> for help on Groovy.</p>
 
 <p>You can reinitialize the details view in the <a href="prefs://Troubleshooting">Troubleshooting preferences</a>.</p>
 <p>Additionally, certain details view options are available in <a href="prefs://General">General preferences</a>.</p>
