--- a/releases/8.0.0.xhtml
+++ b/releases/8.0.0.xhtml
@@ -27,10 +27,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>
 				<code>CHANGELOG.md</code> in the spirit of <a href="http://keepachangelog.com/">Keep a CHANGELOG</a>.</li>
 			<li>Rough <code>TODO.md</code> listing some things that should be done.</li>
-			<li>Error dialog if Lilith is started with Java prior to 1.8.0_51.</li>
+			<li>Error dialog if Lilith is started with Java prior to 1.8.0_66.</li>
 			<li>Added "Clear view" shortcut Cmd-K. K for clear.</li>
 			<li>Added lilith.version.bundle to system properties.</li>
 			<li>Displaying release notes of "newzest version" if already available.</li>
+			<li>Option to ignore the secondary identifier of event sources, ignoring by default.</li>
 		</ul>
 
 		<h3>Changed</h3>
@@ -54,6 +55,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Recompressed images with latest <a href="https://imageoptim.com/">ImageOptim</a> version.</li>
 			<li>Better app icon on Mac. Thanks to Christian Balog!</li>
 			<li>Tried to ensure that license dialog is always visible.</li>
+			<li>Changed default of <code>Show primary identifier even for named sources.</code> preferences to <code>false</code>.</li>
+			<li>Enhanced <code>Open inactive log...</code> dialog.</li>
 		</ul>
 
 		<h3>Deprecated</h3>
@@ -86,7 +89,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Fixed statistics in case of Java != 1.6</li>
 			<li>Fixed "Focus" and "Exclude" menu tooltips on Mac. Those displayed HTML source if system menu bar was used.</li>
 			<li>Fixed <a href="http://groovy-lang.org/">Groovy</a> links in help.</li>
-			<li>SLF4J 1.7.12, Logback 1.1.3, Spring 4.1.7, Groovy 2.4.4, commons-codec 1.9, commons-lang3 3.4, httpclient 4.5, httpcore 4.4.1, jackson 2.5.4, log4j2 2.3, aspectj 1.8.6, Thymeleaf 2.1.4, substance 7.3, protobuf 2.6.1, jcommander 1.48, glazedlists 1.9.1, servlet-api 3.1.0, flying-saucer 9.0.6, cglib 3.1, rrd4j 2.2.1 </li>
+			<li>SLF4J 1.7.12, Logback 1.1.3, Spring 4.2.2, Groovy 2.4.5, commons-codec 1.9, commons-lang3 3.4, httpclient 4.5.1, httpcore 4.4.3, jackson 2.6.3, log4j2 2.4.1, aspectj 1.8.7, Thymeleaf 2.1.4, substance 7.3, protobuf 2.6.1, jcommander 1.48, glazedlists 1.9.1, servlet-api 3.1.0, flying-saucer 9.0.6, cglib 3.1, rrd4j 2.2.1 </li>
 		</ul>
 
 		<h3>Security</h3>
