--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -40,9 +40,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		<ul>
 			<li>Using <code>java.time.format</code> instead of <code>SimpleDateFormat</code>.</li>
 			<li>Don't create copy of whitelist Set in <code>WhitelistObjectInputStream</code>.</li>
-			<li>Requires Java 8 <code>1.8.0_72</code>.</li>
+			<li>Requires Java 8 <code>1.8.0_77</code>.</li>
 			<li>Added option to start application even if Java version requirements are not met.</li>
 			<li>Changed accelerator of "Copy Throwable" from "command shift alt T" to "command shift T".</li>
+			<li>Changed specification of HTTP status code 451 from draft to RFC 7725.</li>
 		</ul>
 		
 		<h3>Deprecated</h3>
@@ -65,7 +66,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Fixed NPE in LoggingEventProtobufEncoder. This fixes issue #22.</li>
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - smaller than <code>1.8.0_66</code> since `-internal' is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
-			<li>log4j2 2.5, slf4j 1.7.16, Logback 1.1.5, jackson 2.7.1, Spring 4.2.5, Groovy 2.4.6, aspectj 1.8.8</li>
+			<li>log4j2 2.5, slf4j 1.7.19, Logback 1.1.6, jackson 2.7.3, Spring 4.2.5, Groovy 2.4.6, aspectj 1.8.9, httpclient 4.5.2</li>
 		</ul>
 		
 		<h3>Security</h3>
