--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -15,7 +15,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		<br />(Released: 2016-xx-xx)</a>
 		</div>
 		
-		<p>This version of Lilith requires Java 8 update 72 or higher and will says so if you try to start it with an older version.</p>
+		<p>This version of Lilith requires Java 8 update 92 or higher and will says so if you try to start it with an older version.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		
@@ -36,6 +36,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Added "Copy call location" accelerator "command shift S".</li>
 			<li>Added "Copy call stack" accelerator "command shift alt S".</li>
 			<li>Added "Copy request URL".</li>
+			<li>Added "Copy request headers".</li>
+			<li>Added "Copy request parameters".</li>
+			<li>Added "Copy response headers".</li>
 		</ul>
 		
 		<h3>Changed</h3>
@@ -49,7 +52,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Changed specification of HTTP status code 451 from draft to RFC 7725.</li>
 			<li>Changed meaning of <code>ThrowableCondition</code>. Condition now evaluates to true if search string is one of the <code>Throwable</code> contained in the hierarchy (including cause, suppressed) instead of only checking the root exception.</li>
 			<li>
-				<code>EventContainsCondition</code> is now evaluating <code>Throwable</code> and NDC.</li>
+				<code>EventContainsCondition</code> is now evaluating <code>Throwable</code>, NDC and any contained <code>StackTraceElement</code> values.</li>
 			<li>
 				<code>appendTo</code> methods of <code>ThrowableInfo</code> and <code>ExtendedStackTraceElement</code> now throw a <code>NullPointerException</code> if <code>StringBuilder</code> is <code>null</code>.</li>
 			<li>
