--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -99,11 +99,12 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		
 		<ul>
 			<li>Make frames entirely visible after selecting them from the Windows Menu.</li>
-			<li>Added some more classes to deserialization whitelist. The missing classes prevented deserialization of some log4j2 events. This fixes issue #21.</li>
-			<li>Fixed NPE in LoggingEventProtobufEncoder. This fixes issue #22.</li>
+			<li>Added some more classes to deserialization whitelist. The missing classes prevented deserialization of some log4j2 events. This fixes <a href="https://github.com/huxi/lilith/issues/21">issue #21</a>.</li>
+			<li>Fixed NPE in LoggingEventProtobufEncoder. This fixes <a href="https://github.com/huxi/lilith/issues/22">issue #22</a>.</li>
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
+			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - smaller than <code>1.8.0_66</code> since `-internal' is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
-			<li>log4j2 2.5, slf4j 1.7.21, Logback 1.1.7, jackson 2.7.4, Spring 4.2.6, Groovy 2.4.6, aspectj 1.8.9, httpclient 4.5.2, jgoodies 2.7.0, commons-io 2.5</li>
+			<li>log4j2 2.6.2, slf4j 1.7.21, Logback 1.1.7, jackson 2.8.0, Spring 4.3.1, Groovy 2.4.7, aspectj 1.8.9, httpclient 4.5.2, httpcore 4.4.5, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5</li>
 		</ul>
 		
 		<h3>Security</h3>
@@ -115,6 +116,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		<h3>Known issues</h3>
 		
 		<ul>
+			<li>Lilith won't work with Java 9 for now.
+See <a href="http://bugs.java.com/bugdatabase/view_bug.do?bug_id=JDK-8160437">JDK-8160437 - com.apple.eawt.Application is not exported and jdeps didn't warn about it</a>.</li>
 			<li>
 				<p>Garbled icons on Mac OS X 10.11. This is a bug in OS X. Supposedly #23164356.</p>
 				
@@ -143,6 +146,10 @@ vec4 _falseColor(vec4 img, vec4 c0, vec4 c1) {
 				<p>Some log4j2 <code>Message</code> implementations aren't supported.
 See <a href="https://issues.apache.org/jira/browse/LOG4J2-1226">Message instances are simply serialized. They mustn't.</a>.</p>
 			</li>
+			<li>logback-access <code>AccessEvent</code> sent by <code>SocketAppender</code> isn't guaranteed to be deserializable at the moment. You can use the Lilith Multiplex Socket Appender in the meantime.
+See <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
+			<li>Logback 1.1.0 introduced some message formatting regressions.
+See <a href="http://jira.qos.ch/browse/LOGBACK-1183">LOGBACK-1183 - Message formatting regression</a>.</li>
 			<li>Flying Saucer related issues:
 <ul><li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
 See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li>
