Use woodstox as stax implementation.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -142,6 +142,10 @@
 		<td><a href="http://www.thymeleaf.org/">Thymeleaf</a></td>
 		<td><a href="http://www.thymeleaf.org/license.html">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
+	<tr>
+		<td><a href="https://github.com/FasterXML/woodstox">Woodstox</a></td>
+		<td><a href="https://github.com/FasterXML/woodstox/blob/master/LICENSE">The Apache Software License Version, Version 2.0</a></td>
+	</tr>
 </table>
 
 <p>If something is missing from the above list it's not a license breach but a bug ;-) and you should report it.</p>
