--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -95,6 +95,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Details view is now showing all available thread information.</li>
 			<li>XML is now handled by Woodstox.</li>
 			<li>Moved "Logger" in "Focus"/"Exclude" menus from bottom to top.</li>
+			<li>
+				<code>applicationUUID</code> is now actually a <a href="https://github.com/alizain/ulid">ULID</a>. The existing methods <code>setCreatingUUID</code>/<code>isCreatingUUID</code> and <code>getUUID</code> in the multiplex appenders are not renamed for compatibility reasons. ULID generation is handled in the new <code>de.huxhorn.sulky:de.huxhorn.sulky.ulid</code> module.</li>
 		</ul>
 		
 		<h3>Deprecated</h3>
@@ -121,8 +123,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Fixed NPE in LoggingEventProtobufEncoder. This fixes <a href="https://github.com/huxi/lilith/issues/22">issue #22</a>.</li>
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
-			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since `-internal' is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
-			<li>log4j2 2.7, slf4j 1.7.21, Logback 1.1.7, jackson 2.8.3, Spring 4.3.3, Groovy 2.4.7, aspectj 1.8.9, httpclient 4.5.2, httpcore 4.4.5, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.0.2, jcommander 1.58, commons-lang3 3.5</li>
+			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
+			<li>log4j2 2.7, slf4j 1.7.21, Logback 1.1.7, jackson 2.8.5, Spring 4.3.4, Groovy 2.4.7, aspectj 1.8.10, httpclient 4.5.2, httpcore 4.4.5, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.0.2, jcommander 1.58, commons-lang3 3.5</li>
 		</ul>
 		
 		<h3>Security</h3>
