Removed app.net link.
See http://blog.app.net/2017/01/12/app-net-is-shutting-down/

--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -49,9 +49,8 @@
 		Lilith.
 	</li>
 	<li>
-		You could send me a nice mention on <a href="https://twitter.com/lilithapp/">Twitter</a>
-		or <a href="https://alpha.app.net/lilithapp">App.net</a>.<br/>
-		And you could follow those accounts.
+		You could send me a nice mention on <a href="https://twitter.com/lilithapp/">Twitter</a>.<br/>
+		And you could follow that account.
 	</li>
 	<li>
 		You could star the project on <a href="https://github.com/huxi/lilith">GitHub</a>.
