--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -63,7 +63,7 @@
 		You could endorse me on <a href="https://coderwall.com/huxi">Coderwall</a>.
 	</li>
 	<li>
-		You could use <a href="https://www.gittip.com/lilithapp/">Gittip</a>.
+		You could use <a href="https://gratipay.com/~lilithapp/">Gratipay</a>.
 	</li>
 	<li>
 		You could give me a nice review over at <a href="http://sourceforge.net/projects/lilith/">SourceForge</a>.
