--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -56,8 +56,8 @@
 		You could star the project on <a href="https://github.com/huxi/lilith">GitHub</a>.
 	</li>
 	<li>
-		You could tell me that you use this software on <a href="https://www.ohloh.net/p/lilith">Ohloh</a> and
-		you could even <a href="https://www.ohloh.net/accounts/huxi">give me a Kudo</a>.
+		You could tell me that you use this software on <a href="https://www.openhub.net/p/lilith">OpenHub</a> and
+		you could even <a href="https://www.openhub.net/accounts/huxi">give me a Kudo</a>.
 	</li>
 	<li>
 		You could endorse me on <a href="https://coderwall.com/huxi">Coderwall</a>.
