Flattr http => https

--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -45,7 +45,7 @@
 		DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm</a>
 	</li>
 	<li>
-		You could <a href="http://flattr.com/thing/15170/Lilith-Logging-and-AccessEvent-Monitor-for-Logback">flattr</a>
+		You could <a href="https://flattr.com/thing/15170/Lilith-Logging-and-AccessEvent-Monitor-for-Logback">flattr</a>
 		Lilith.
 	</li>
 	<li>
