--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -97,6 +97,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Moved "Logger" in "Focus"/"Exclude" menus from bottom to top.</li>
 			<li>
 				<code>applicationUUID</code> is now actually a <a href="https://github.com/alizain/ulid">ULID</a>. The existing methods <code>setCreatingUUID</code>/<code>isCreatingUUID</code> and <code>getUUID</code> in the multiplex appenders are not renamed for compatibility reasons. ULID generation is handled in the new <code>de.huxhorn.sulky:de.huxhorn.sulky.ulid</code> module.</li>
+			<li>Activated automatic graphics switching on Mac, i.e. don't demand the high-performance, energy-hungry GPU. This fixes <a href="https://github.com/huxi/lilith/issues/27">issue #27</a>. Thanks to Nikita Belenkiy for the detailed issue.</li>
 		</ul>
 		
 		<h3>Deprecated</h3>
@@ -124,7 +125,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
-			<li>log4j2 2.8, slf4j 1.7.22, Logback 1.1.9, jackson 2.8.6, Spring 4.3.5, Groovy 2.4.8, aspectj 1.8.10, httpclient 4.5.2, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.0.2, jcommander 1.60, commons-lang3 3.5</li>
+			<li>log4j2 2.8, slf4j 1.7.23, Logback 1.2.0, jackson 2.8.6, Spring 4.3.6, Groovy 2.4.8, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
 		</ul>
 		
 		<h3>Security</h3>
@@ -142,6 +143,10 @@ See <a href="http://bugs.java.com/bugdatabase/view_bug.do?bug_id=JDK-8160437">JD
 See <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Logback 1.1.0 introduced some message formatting regressions.
 See <a href="http://jira.qos.ch/browse/LOGBACK-1183">LOGBACK-1183 - Message formatting regression</a>.</li>
+			<li>
+				<del>Binary Lilith log files will only work in case of <code>append=false</code>.</del> Implemented a workaround.
+See <a href="https://jira.qos.ch/browse/LOGBACK-1257">LOGBACK-1257 - Invalid files in case of append=true and Encoder with non-null headerBytes() / footerBytes()</a>
+			</li>
 			<li>Flying Saucer related issues:
 <ul><li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
 See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li>
