--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -1,28 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Lilith 8.1.0 Release Notes</title>
-		<link href="help.css" rel="stylesheet" type="text/css"/>
+		<link href="help.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<h1>Lilith 8.1.0</h1>
-		
 		<div>
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.1.0">Download Now!
 		<br />(Released: 2017-xx-xx)</a>
 		</div>
-		
 		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
-		
 		<h2>Changelog</h2>
-		
 		<h3>Added</h3>
-		
 		<ul>
 			<li>Added <code>TemporalAccessor</code> support to <code>SafeString</code>.</li>
 			<li>Added log4j2 <code>Marker</code> support.</li>
@@ -53,9 +47,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Added "Focus Response Header"/"Exclude Response Header".</li>
 			<li>Added alternative behavior for "MDC", "Request Parameter", "Request Header" and "Response Header" Focus/Exclude menu items. Pressing <code>Alt</code> while selecting Action will match any value for the given key.</li>
 		</ul>
-		
 		<h3>Changed</h3>
-		
 		<ul>
 			<li>Using <code>java.time.format</code> instead of <code>SimpleDateFormat</code>.</li>
 			<li>Don't create copy of whitelist Set in <code>WhitelistObjectInputStream</code>.</li>
@@ -64,60 +56,42 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Changed accelerator of "Copy Throwable" from "command shift alt T" to "command shift T".</li>
 			<li>Changed specification of HTTP status code 451 from draft to RFC 7725.</li>
 			<li>Changed meaning of <code>ThrowableCondition</code>. Condition now evaluates to true if search string is one of the <code>Throwable</code> contained in the hierarchy (including cause, suppressed) instead of only checking the root exception.</li>
-			<li>
-				<code>EventContainsCondition</code> is now evaluating <code>Throwable</code>, NDC and any contained <code>StackTraceElement</code> values.</li>
-			<li>
-				<code>appendTo</code> methods of <code>ThrowableInfo</code> and <code>ExtendedStackTraceElement</code> now throw a <code>NullPointerException</code> if <code>StringBuilder</code> is <code>null</code>.</li>
-			<li>
-				<code>ExtendedStackTraceElement.appendExtended</code> is now private.</li>
-			<li>
-				<code>ExtendedStackTraceElement.toString(true)</code> is now printing <code>"na"</code> instead of empty string if codeLocation or version is null.</li>
-			<li>
-				<code>HttpStatusTypeCondition</code> understands more input. "SUCCESSFUL", "su", "2", "2X" and " 2x " will all evaluate to <code>HttpStatus.Type.SUCCESSFUL</code>.</li>
-			<li>
-				<code>CallLocationCondition</code> understands more input. "at " and whitespace is now automatically removed.</li>
-			<li>
-				<code>HttpRemoteUserCondition</code> is less strict. String is first trimmed for both condition and remote user of event. Empty string and "-" are both considered "no user name" and the condition matches accordingly.</li>
-			<li>
-				<code>MDCContainsCondition</code> without value will now match if the MDC of an event contains any value (even null) for the given key.</li>
-			<li>
-				<code>SafeString</code>/<code>MessageFormatter</code> changes. Those only have an effect if Lilith appenders are used.
-<ul><li><code>String</code> instances contained in <code>Collection</code>, <code>Map</code> or <code>Object[]</code> are now wrapped in apostrophes. This means that an empty <code>Set</code> will look differently than one containing an empty <code>String</code>. Similarly, a <code>null</code> element will look differently than <code>'null'</code>.</li>
-					<li>
-						<code>Map</code> instances are now formatted in Groovy style (<code>[key:value, key2:value2]</code>) instead of Java style (<code>{key=value, key2=value2}</code>).</li>
-					<li>
-						<code>byte[]</code>, <code>Byte[]</code> and <code>Byte</code> are now converted to hex values. Because <code>[0xCA, 0xFE, 0xBA, 0xBE]</code> has better readability than <code>[-54, -2, -70, -66]</code>.</li>
-					<li>This is not a compatibility contest. It's about usability.</li>
-				</ul>
-			</li>
+			<li><code>EventContainsCondition</code> is now evaluating <code>Throwable</code>, NDC and any contained <code>StackTraceElement</code> values.</li>
+			<li><code>appendTo</code> methods of <code>ThrowableInfo</code> and <code>ExtendedStackTraceElement</code> now throw a <code>NullPointerException</code> if <code>StringBuilder</code> is <code>null</code>.</li>
+			<li><code>ExtendedStackTraceElement.appendExtended</code> is now private.</li>
+			<li><code>ExtendedStackTraceElement.toString(true)</code> is now printing <code>"na"</code> instead of empty string if codeLocation or version is null.</li>
+			<li><code>HttpStatusTypeCondition</code> understands more input. "SUCCESSFUL", "su", "2", "2X" and " 2x " will all evaluate to <code>HttpStatus.Type.SUCCESSFUL</code>.</li>
+			<li><code>CallLocationCondition</code> understands more input. "at " and whitespace is now automatically removed.</li>
+			<li><code>HttpRemoteUserCondition</code> is less strict. String is first trimmed for both condition and remote user of event. Empty string and "-" are both considered "no user name" and the condition matches accordingly.</li>
+			<li><code>MDCContainsCondition</code> without value will now match if the MDC of an event contains any value (even null) for the given key.</li>
+			<li><code>SafeString</code>/<code>MessageFormatter</code> changes. Those only have an effect if Lilith appenders are used.
+<ul><li><code>String</code> instances contained in <code>Collection</code>, <code>Map</code> or <code>Object[]</code> are now wrapped in apostrophes. This means that an empty <code>Set</code> will look differently than one containing an empty <code>String</code>. Similarly, a <code>null</code> element will look differently than <code>'null'</code>.</li><li><code>Map</code> instances are now formatted in Groovy style (<code>[key:value, key2:value2]</code>) instead of Java style (<code>{key=value, key2=value2}</code>).</li><li><code>byte[]</code>, <code>Byte[]</code> and <code>Byte</code> are now converted to hex values. Because <code>[0xCA, 0xFE, 0xBA, 0xBE]</code> has better readability than <code>[-54, -2, -70, -66]</code>.</li><li>This is not a compatibility contest. It's about usability.</li></ul></li>
 			<li>"Paste StackTraceElement" (command shift V) is now much more effective. It parses the text from the clipboard and opens the first <code>StackTraceElement</code> it finds in IDEA (if the necessary IDEA plugin is installed). Parsing is much more lenient.</li>
 			<li>Using <code>SafeString</code> for "Copy MDC".</li>
 			<li>Details view is now showing all available thread information.</li>
 			<li>XML is now handled by Woodstox.</li>
 			<li>Moved "Logger" in "Focus"/"Exclude" menus from bottom to top.</li>
-			<li>
-				<code>applicationUUID</code> is now actually a <a href="https://github.com/alizain/ulid">ULID</a>. The existing methods <code>setCreatingUUID</code>/<code>isCreatingUUID</code> and <code>getUUID</code> in the multiplex appenders are not renamed for compatibility reasons. ULID generation is handled in the new <code>de.huxhorn.sulky:de.huxhorn.sulky.ulid</code> module.</li>
+			<li><code>applicationUUID</code> is now actually a <a href="https://github.com/alizain/ulid">ULID</a>. The existing methods <code>setCreatingUUID</code>/<code>isCreatingUUID</code> and <code>getUUID</code> in the multiplex appenders are not renamed for compatibility reasons. ULID generation is handled in the new <code>de.huxhorn.sulky:de.huxhorn.sulky.ulid</code> module.</li>
 			<li>Activated automatic graphics switching on Mac, i.e. don't demand the high-performance, energy-hungry GPU. This fixes <a href="https://github.com/huxi/lilith/issues/27">issue #27</a>. Thanks to Nikita Belenkiy for the detailed issue.</li>
+			<li>Enhanced preferences dialog. This fixes <a href="https://github.com/huxi/lilith/issues/17">issue #17</a>.</li>
 		</ul>
-		
 		<h3>Deprecated</h3>
-		
 		<ul>
 			<li>Nothing.</li>
 		</ul>
-		
 		<h3>Removed</h3>
-		
 		<ul>
 			<li>Removed <code>SourceInfo</code> and related classes. They were all unused and also terrible.</li>
 			<li>Removed <code>LoggingEvents</code> and related classes. Same as above.</li>
 			<li>Removed <code>AccessEvents</code> and related classes. Same as above.</li>
 			<li>Removed unused methods <code>getTextColor()</code>, <code>getBackgroundColor()</code> and <code>getBorderColor()</code> of class <code>SavedCondition</code>.</li>
 			<li>Removed unused c'tors in <code>AbstractFilterAction</code>, <code>AbstractLoggingFilterAction</code> and <code>AbstractAccessFilterAction</code>.</li>
+			<li>Removed RRD statistics.</li>
+			<li>Removed unused SenderService and jMDNS.</li>
+			<li>Removed unused and broken <code>UserNotificationLoggingEventHandler</code> and <code>UserNotificationAccessEventHandler</code>.</li>
+			<li>Removed macify to ensure Java 9 compatibility.</li>
 		</ul>
-		
 		<h3>Fixed</h3>
-		
 		<ul>
 			<li>Make frames entirely visible after selecting them from the Windows Menu.</li>
 			<li>Added some more classes to deserialization whitelist. The missing classes prevented deserialization of some log4j2 events. This fixes <a href="https://github.com/huxi/lilith/issues/21">issue #21</a>.</li>
@@ -125,44 +99,31 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
-			<li>log4j2 2.8, slf4j 1.7.23, Logback 1.2.0, jackson 2.8.6, Spring 4.3.6, Groovy 2.4.8, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
+			<li>log4j2 2.8, slf4j 1.7.23, Logback 1.2.0, jackson 2.8.7, Spring 4.3.6, Groovy 2.4.8, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
 		</ul>
-		
 		<h3>Security</h3>
-		
 		<ul>
 			<li>Nothing.</li>
 		</ul>
-		
 		<h3>Known issues</h3>
-		
 		<ul>
-			<li>Lilith won't work with Java 9 for now.
-See <a href="http://bugs.java.com/bugdatabase/view_bug.do?bug_id=JDK-8160437">JDK-8160437 - com.apple.eawt.Application is not exported and jdeps didn't warn about it</a>.</li>
 			<li>logback-access <code>AccessEvent</code> sent by <code>SocketAppender</code> isn't guaranteed to be deserializable at the moment. You can use the Lilith Multiplex Socket Appender in the meantime.
 See <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Logback 1.1.0 introduced some message formatting regressions.
 See <a href="http://jira.qos.ch/browse/LOGBACK-1183">LOGBACK-1183 - Message formatting regression</a>.</li>
-			<li>
-				<del>Binary Lilith log files will only work in case of <code>append=false</code>.</del> Implemented a workaround.
-See <a href="https://jira.qos.ch/browse/LOGBACK-1257">LOGBACK-1257 - Invalid files in case of append=true and Encoder with non-null headerBytes() / footerBytes()</a>
-			</li>
+			<li><del>Binary Lilith log files will only work in case of <code>append=false</code>.</del> Implemented a workaround.
+See <a href="https://jira.qos.ch/browse/LOGBACK-1257">LOGBACK-1257 - Invalid files in case of append=true and Encoder with non-null headerBytes() / footerBytes()</a></li>
 			<li>Flying Saucer related issues:
 <ul><li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li>
-					<li>The first line of the message in HTML view is not properly indented if it starts with whitespace.
+See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li><li>The first line of the message in HTML view is not properly indented if it starts with whitespace.
 You can see this effect by examining the event created by LogPinupLargeRunnable (executed via "Log ASCII").
 The HTML created is actually correct.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=125">Issue 125: &lt;pre> ignores leading whitespace</a>.</li>
-					<li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=105">Issue 105: URLs with anchors</a>.</li>
-				</ul>
-			</li>
+See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=125">Issue 125: &lt;pre&gt; ignores leading whitespace</a>.</li><li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
+See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=105">Issue 105: URLs with anchors</a>.</li></ul></li>
 			<li>Lilith may hang during startup while creating the preferences dialog. Just restart Lilith in that rare case.
 This is caused by <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6995182">Java bug #6995182</a> and I can't do anything about it.
 Sorry about it. It's a stupid Java-MediaTracker-ColorChooser-Bug with no workaround available.</li>
 		</ul>
-		
 		<h2>Previous Versions</h2>
 		<ul>
 			<li>
@@ -199,11 +160,10 @@ Sorry about it. It's a stupid Java-MediaTracker-ColorChooser-Bug with no workaro
 				<a href="http://lilithapp.com/releases/0.9.36.xhtml">0.9.36</a>
 			</li>
 		</ul>
-		
-		<hr/>
+		<hr />
 		<p>
-		Donate in <a href="bitcoin:19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn">Bitcoin</a>. - 19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn<br/>
-		Donate in <a href="litecoin:LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV">Litecoin</a>. - LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV<br/>
+		Donate in <a href="bitcoin:19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn">Bitcoin</a>. - 19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn<br />
+		Donate in <a href="litecoin:LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV">Litecoin</a>. - LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV<br />
 		Donate in <a href="dogecoin:DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm">Dogecoin</a>. - DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm
 		</p>
 	</body>
