--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -46,6 +46,7 @@
 			<li>Added "Focus Request Header"/"Exclude Request Header".</li>
 			<li>Added "Focus Response Header"/"Exclude Response Header".</li>
 			<li>Added alternative behavior for "MDC", "Request Parameter", "Request Header" and "Response Header" Focus/Exclude menu items. Pressing <code>Alt</code> while selecting Action will match any value for the given key.</li>
+			<li>Added support for <code>ClassLoaderName</code>, <code>ModuleName</code> and <code>ModuleVersion</code> in Java 9 <code>StackTraceElement</code>.</li>
 		</ul>
 		<h3>Changed</h3>
 		<ul>
@@ -95,11 +96,12 @@
 		<ul>
 			<li>Make frames entirely visible after selecting them from the Windows Menu.</li>
 			<li>Added some more classes to deserialization whitelist. The missing classes prevented deserialization of some log4j2 events. This fixes <a href="https://github.com/huxi/lilith/issues/21">issue #21</a>.</li>
+			<li>Added another class to deserialization whitelist. The missing class prevented deserialization of logback 1.2.x events.</li>
 			<li>Fixed NPE in LoggingEventProtobufEncoder. This fixes <a href="https://github.com/huxi/lilith/issues/22">issue #22</a>.</li>
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
-			<li>log4j2 2.8, slf4j 1.7.23, Logback 1.2.0, jackson 2.8.7, Spring 4.3.6, Groovy 2.4.8, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
+			<li>log4j2 2.8, slf4j 1.7.24, Logback 1.2.1, jackson 2.8.7, Spring 4.3.6, Groovy 2.4.8, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
 		</ul>
 		<h3>Security</h3>
 		<ul>
