Added some more tips.

--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -47,6 +47,7 @@
 			<li>Added "Focus Response Header"/"Exclude Response Header".</li>
 			<li>Added alternative behavior for "MDC", "Request Parameter", "Request Header" and "Response Header" Focus/Exclude menu items. Pressing <code>Alt</code> while selecting Action will match any value for the given key.</li>
 			<li>Added support for <code>ClassLoaderName</code>, <code>ModuleName</code> and <code>ModuleVersion</code> in Java 9 <code>StackTraceElement</code>.</li>
+			<li>Added some more tips.</li>
 		</ul>
 		<h3>Changed</h3>
 		<ul>
