--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -104,6 +104,7 @@
 			<li>Fixed NPE in CheckForUpdateRunnable in case of broken network connection.</li>
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
+			<li>Making sure selected event is reset when last view is closed.</li>
 			<li>log4j2 2.8, slf4j 1.7.24, Logback 1.2.1, jackson 2.8.7, Spring 4.3.6, Groovy 2.4.9, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
 		</ul>
 		<h3>Security</h3>
