Updated link to flyingsaucer.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -59,7 +59,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td><a href="http://code.google.com/p/flying-saucer/">Flying Saucer / xhtmlrenderer</a></td>
+		<td><a href="https://github.com/flyingsaucerproject/flyingsaucer">Flying Saucer / xhtmlrenderer</a></td>
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
 	</tr>
 	<tr>
