name attribute => id attribute

--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Using the Lilith Classic Socket Appender</a></h1>
+<h1><a id="top">Using the Lilith Classic Socket Appender</a></h1>
 
 <p>The Lilith Classic Socket Appender is a replacement for <code>ch.qos.logback.classic.net.SocketAppender</code>.<br/>
 	This appender, in contrast to logbacks, supports <code>logger.debug("{} {}", new Object[]{foo, bar, throwable)</code>, i.e.
