--- a/lilith/src/main/resources/help/contact.xhtml
+++ b/lilith/src/main/resources/help/contact.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Contact</a></h1>
+<h1><a id="top">Contact</a></h1>
 
 <p>You have several options to stay in touch with the further development of Lilith.</p>
 
