--- a/lilith/src/main/resources/help/file-appender.xhtml
+++ b/lilith/src/main/resources/help/file-appender.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Using Lilith Encoders with Logback FileAppender</a></h1>
+<h1><a id="top">Using Lilith Encoders with Logback FileAppender</a></h1>
 
 <p>Starting with Lilith 0.9.38 and Logback 0.9.19, you can write Lilith files directly from within Logback.</p>
 <p>Those files can be opened by Lilith using either the Open command or drag&amp;drop.</p>
