--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Keyboard</a></h1>
+<h1><a id="top">Keyboard</a></h1>
 
 <p>^ represents the system dependent command key, e.g. "Ctrl" on Windows and
 	"cmd &#8984;" on Mac</p>
@@ -57,7 +57,7 @@
 	 <dd>Clear and remove inactive views.</dd>
 -->
 	<dt>^+T</dt>
-	<dd>Toggles tailing ("scroll to bottom"-funtionality).</dd>
+	<dd>Toggles tailing ("scroll to bottom"-functionality).</dd>
 
 	<dt>^+P</dt>
 	<dd>Pause/Unpause view.<br/>
@@ -145,7 +145,7 @@
 	<dt>???</dt>
 	<dd>Cancel find operation.</dd>
 -->
-	
+
 	<dt>Esc (if find panel is visible)</dt>
 	<dd>Close find panel.</dd>
 
