--- a/lilith/src/main/resources/help/log4j.xhtml
+++ b/lilith/src/main/resources/help/log4j.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Using the LOG4J SocketAppender</a></h1>
+<h1><a id="top">Using the LOG4J SocketAppender</a></h1>
 
 <p>Starting with Lilith 0.9.40, receiving events from LOG4J is also an option.</p>
 
