--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -10,14 +10,14 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Show some Love...</a></h1>
+<h1><a id="top">Show some Love...</a></h1>
 <p>
 	You like Lilith? Just tell me!
 </p>
 <p>
 	The feedback I receive for Lilith (excluding highly appreciated bug reports)
 	is scarce. About 50% of it is praise while the other 50% are complaining
-	about <a name="naked" href="#breasts">naked breasts</a>.<br/>
+	about <a id="naked" href="#breasts">naked breasts</a>.<br/>
 	(No, <a href="https://github.com/huxi/lilith/issues/11">I don't intend to remove
 	those breasts</a>.)
 </p>
@@ -73,7 +73,7 @@
 	</li>
 </ul>
 
-<h2><a name="breasts">Breasts?</a></h2>
+<h2><a id="breasts">Breasts?</a></h2>
 <p>
 	<img src="images/ratings.png"  alt="Ratings..."/><br />
 	<a href="#naked">Back</a>
