--- a/lilith/src/main/resources/help/sources.xhtml
+++ b/lilith/src/main/resources/help/sources.xhtml
@@ -10,16 +10,16 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Sources, Source-Names &amp; Source-Lists</a></h1>
+<h1><a id="top">Sources, Source-Names &amp; Source-Lists</a></h1>
 
-<h2><a name="sources">Sources</a></h2>
+<h2><a id="sources">Sources</a></h2>
 
 <p>Sources are the origin of events that are received by Lilith. The typical source identifier is the IP address
 	of the machine sending the event. This would be "127.0.0.1" in case of your own computer.</p>
 
 <p><a href="#top">Back to top.</a></p>
 
-<h2><a name="sourceNames">Source-Names</a></h2>
+<h2><a id="sourceNames">Source-Names</a></h2>
 
 <p>It's possible to give a certain source a name, e.g. the source "127.0.0.1" would likely be named "localhost",
 	using "View" =&gt; "Edit source name...".
@@ -42,7 +42,7 @@
 
 <p><a href="#top">Back to top.</a></p>
 
-<h2><a name="sourceLists">Source-Lists</a></h2>
+<h2><a id="sourceLists">Source-Lists</a></h2>
 
 <p>Source-Lists can be used to either white- or black-list on the contained sources.<br/>
 	In case of white-listing, only events from sources <strong>contained</strong> in the selected source list are accepted.<br/>
