--- a/lilith/src/main/resources/help/access-appender.xhtml
+++ b/lilith/src/main/resources/help/access-appender.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Using the Lilith Access Socket Appender</a></h1>
+<h1><a id="top">Using the Lilith Access Socket Appender</a></h1>
 
 <p>The Lilith Access Socket Appender is a replacement for <code>ch.qos.logback.access.net.SocketAppender</code>.
 	While LogBACK's appender is stream-based, i.e. it streams access events using an <code>ObjectOutputStream</code>, the
