--- a/lilith/src/main/resources/help/producers.xhtml
+++ b/lilith/src/main/resources/help/producers.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Event producers</a></h1>
+<h1><a id="top">Event producers</a></h1>
 
 <p>Lilith starts the following event producers:</p>
 
