--- a/lilith/src/main/resources/help/clipboardFormatters.xhtml
+++ b/lilith/src/main/resources/help/clipboardFormatters.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">Custom Clipboard Formatters</a></h1>
+<h1 id="top">Custom Clipboard Formatters</h1>
 
 <p>It is possible to create complex clipboard formatters in Groovy.
 	The scripts must be created in "[lilith.home]/clipboardFormatters" and must have a ".groovy" extension.</p>
