--- a/lilith/src/main/resources/help/faq.xhtml
+++ b/lilith/src/main/resources/help/faq.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">Frequently Asked Questions</a></h1>
+<h1 id="top">Frequently Asked Questions</h1>
 
 <dl>
 	<dt>Why is there no case-insensitive search?</dt>
