--- a/lilith/src/main/resources/help/idea.xhtml
+++ b/lilith/src/main/resources/help/idea.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">IDEA integration</a></h1>
+<h1 id="top">IDEA integration</h1>
 
 <p>Just install the Lilith plugin in IDEA and you'll be able to jump to the source of an event
 	using a SHIFT-doubleclick or by clicking on a stacktrace element in either the callstack or
