--- a/lilith/src/main/resources/help/jul.xhtml
+++ b/lilith/src/main/resources/help/jul.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">Using the java.util.logging SocketHandler</a></h1>
+<h1 id="top">Using the java.util.logging SocketHandler</h1>
 
 <p>Starting with Lilith 0.9.40, receiving events from java.util.logging is also an option.</p>
 
