--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">Keyboard</a></h1>
+<h1 id="top">Keyboard</h1>
 
 <p>^ represents the system dependent command key, e.g. "Ctrl" on Windows and
 	"cmd &#8984;" on Mac</p>
