--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">Show some Love...</a></h1>
+<h1 id="top">Show some Love...</h1>
 <p>
 	You like Lilith? Just tell me!
 </p>
@@ -73,7 +73,7 @@
 	</li>
 </ul>
 
-<h2><a id="breasts">Breasts?</a></h2>
+<h2 id="breasts">Breasts?</h2>
 <p>
 	<img src="images/ratings.png"  alt="Ratings..."/><br />
 	<a href="#naked">Back</a>
