--- a/lilith/src/main/resources/help/story.xhtml
+++ b/lilith/src/main/resources/help/story.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">The story of Lilith</a></h1>
+<h1 id="top">The story of Lilith</h1>
 
 <p> I finished a quick LogBACK compatibility hack for Chainsaw on 2007-05-19 and realized
 	that it wouldn't do at all. It exploded under heavy load and would freeze our webapp in the process.
@@ -23,7 +23,7 @@
 <p>The first functional but very limited prototype was released on 2007-06-25 and is under heavy production use
 	ever since that point of time.</p>
 
-<h2><a id="similar">Similar Software</a></h2>
+<h2 id="similar">Similar Software</h2>
 
 <h3><a href="http://logging.apache.org/chainsaw/index.html">Chainsaw</a></h3>
 <p>Chainsaw v2 is a companion application to Log4j written by members of the Log4j development community.
