--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a id="top">Used Software</a></h1>
+<h1 id="top">Used Software</h1>
 
 <p>Lilith uses the following software, either directly or by transitive dependency:</p>
 
