--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -8,7 +8,7 @@
 	<link href="help.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<h1><a id="top">Lilith Help</a></h1>
+<h1 id="top">Lilith Help</h1>
 
 <h2>Table of Content</h2>
 
