Remove outdated wiki link and add issues link.

--- a/lilith/src/main/resources/help/contact.xhtml
+++ b/lilith/src/main/resources/help/contact.xhtml
@@ -14,12 +14,11 @@
 
 <p>You have several options to stay in touch with the further development of Lilith.</p>
 
-<p>Use the <a href="http://apps.sourceforge.net/trac/lilith/">Wiki</a>. It also contains the issue
-	tracker you may use to request new features or report bugs. A sourceforge.net account is required.</p>
+<p>[Report issues](https://github.com/huxi/lilith/issues) on GitHub.</p>
 
 <p>You can subscribe to one of the mailinglists. You can subscribe to them from the <a href="http://sourceforge.net/projects/lilith/">Lilith project page</a>.</p>
 
-<p>You may also follow <a href="http://twitter.com/lilithapp">lilithapp</a> on Twitter if you like.</p>
+<p>You may also follow <a href="https://twitter.com/lilithapp">lilithapp</a> on Twitter if you like.</p>
 
 <p>Lastly, you can simply <a href="mailto:contact@lilithapp.com">write me a mail</a>.</p>
 
